syntax = "proto3";

package inetmock.audit.v1;

enum HTTPMethod {
  HTTP_METHOD_UNSPECIFIED = 0;
  HTTP_METHOD_GET = 1;
  HTTP_METHOD_HEAD = 2;
  HTTP_METHOD_POST = 3;
  HTTP_METHOD_PUT = 4;
  HTTP_METHOD_DELETE = 5;
  HTTP_METHOD_CONNECT = 6;
  HTTP_METHOD_OPTIONS = 7;
  HTTP_METHOD_TRACE = 8;
  HTTP_METHOD_PATCH = 9;
}

message HTTPHeaderValue {
  repeated string values = 1;
}

message HTTPDetailsEntity {
  HTTPMethod method = 1;
  string host = 2;
  string uri = 3;
  string proto = 4;
  map<string, HTTPHeaderValue> headers = 5;
}
